--- a/index.html
+++ b/index.html
@@ -10,6 +10,19 @@
     <title>Josi Andrade Personalizados</title>
 </head>
 <body>
-    
+    <header>
+        <h1>JOSI ANDRADE PERSONALIZADOS</h1>
+        <nav>
+            <a href="#">Início</a>
+            <a href="#">Nossos Produtos</a>
+            <a href="">Contato</a>
+        </nav>
+    </header>
+    <main>
+
+    </main>
+    <footer>
+        <p>Site criado e desenvolvido por Diego Alvares de Macedo &copy;</p>
+    </footer>
 </body>
 </html>
