--- a/index.html
+++ b/index.html
@@ -18,9 +18,11 @@
             <a href="">Contato</a>
         </nav>
     </header>
-    <main>
 
+    <main>
+        <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Dolore nam totam exercitationem vel quia quasi eaque accusamus consectetur deserunt? Deleniti illum enim totam perspiciatis vitae non modi fugiat ab ipsa?</p>
     </main>
+
     <footer>
         <p>Site criado e desenvolvido por Diego Alvares de Macedo &copy;</p>
     </footer>
