--- a/index.html
+++ b/index.html
@@ -11,11 +11,15 @@
 </head>
 <body>
     <header>
-        <h1>JOSI ANDRADE PERSONALIZADOS</h1>
         <nav>
-            <a href="#">Início</a>
-            <a href="#">Nossos Produtos</a>
-            <a href="">Contato</a>
+            <div id="logo">
+                <img src="logo_josi.jpg" alt="logomarca">
+            </div>
+            <div id="menu">
+                <a href="#">Início</a>
+                <a href="#">Nossos Produtos</a>
+                <a href="#">Contato</a>
+            </div>
         </nav>
     </header>
 
