--- a/index.html
+++ b/index.html
@@ -10,25 +10,26 @@
     <title>Josi Andrade Personalizados</title>
 </head>
 <body>
-    <header>
-        <nav>
-            <div id="logo">
-                <img src="logo_josi.jpg" alt="logomarca">
+    <div id="container">
+        <header>
+            <nav>
+                <div id="logo">
+                    <img src="logo_josi.jpg" alt="logomarca">
+                </div>
+                <div id="menu">
+                    <br>
+                    <a href="#">Início</a><br><br>
+                    <a href="#">Nossos Produtos</a><br><br>
+                    <a href="#">Contato</a>
+                </div>
+            </nav>
+        </header>
+        <main>
+            <div id="oferta1">
+                <img src="imagem-ofertas/etiquetas_escolares.jpg" alt="oferta_etiquetas" width="250px">
             </div>
-            <div id="menu">
-                <a href="#">Início</a>
-                <a href="#">Nossos Produtos</a>
-                <a href="#">Contato</a>
-            </div>
-        </nav>
-    </header>
-
-    <main>
-        <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Dolore nam totam exercitationem vel quia quasi eaque accusamus consectetur deserunt? Deleniti illum enim totam perspiciatis vitae non modi fugiat ab ipsa?</p>
-    </main>
-
-    <footer>
-        <p>Site criado e desenvolvido por Diego Alvares de Macedo &copy;</p>
-    </footer>
+        </main>
+    </div>
+    <footer>Site criado e desenvolvido por Diego Alvares de Macedo &copy;</footer>
 </body>
 </html>
