--- a/index.html
+++ b/index.html
@@ -3,10 +3,11 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="CSS/reset.css">
-    <link rel="stylesheet" href="CSS/header.css">
-    <link rel="stylesheet" href="CSS/main.css">
-    <link rel="stylesheet" href="CSS/footer.css">
+    <link rel="stylesheet" href="CSS/reset.css" type="text/css">
+    <link rel="stylesheet" href="CSS/header.css" type="text/css">
+    <link rel="stylesheet" href="CSS/main.css" type="text/css">
+    <link rel="stylesheet" href="CSS/footer.css" type="text/css">
+    <link rel="stylesheet" href="CSS/mobile.css" type="text/css">
     <title>Josi Andrade Personalizados</title>
 </head>
 <body>
@@ -18,8 +19,8 @@
                 </div>
                 <div id="menu">
                     <br>
-                    <a href="#">Início</a><br><br>
-                    <a href="#">Nossos Produtos</a><br><br>
+                    <a href="#">Início</a>
+                    <a href="#">Nossos Produtos</a>
                     <a href="#">Contato</a>
                 </div>
             </nav>
