--- a/index.html
+++ b/index.html
@@ -11,23 +11,19 @@
     <title>Josi Andrade Personalizados</title>
 </head>
 <body>
-    <div id="container">
-        <header>
-            <nav>
-                <div id="logo">
-                    <img src="logo_josi.jpg" alt="logomarca">
-                </div>
-                <div id="menu">
-                    <br>
-                    <a href="#">Início</a>
-                    <a href="#">Nossos Produtos</a>
-                    <a href="#">Contato</a>
-                </div>
-            </nav>
-        </header>
+    <header>
+        <div id="logo">
+            <img src="logo_josi.jpg" alt="logomarca">
+        </div>
+        <nav>
+            <a href="#">Início</a>
+            <a href="#">Nossos Produtos</a>
+            <a href="#">Contato</a>
+        </nav>
+    </header>
         <main>
             <div id="oferta1">
-                <img src="imagem-ofertas/etiquetas_escolares.jpg" alt="oferta_etiquetas" width="250px">
+                <img src="imagem-ofertas/etiquetas_escolares.jpg" alt="oferta_etiquetas">
             </div>
         </main>
     </div>
