--- a/index.html
+++ b/index.html
@@ -18,12 +18,37 @@
         <nav>
             <a href="#">Início</a>
             <a href="#">Nossos Produtos</a>
-            <a href="#">Contato</a>
         </nav>
     </header>
         <main>
-            <div id="oferta1">
-                <img src="imagem-ofertas/etiquetas_escolares.jpg" alt="oferta_etiquetas">
+            <div id="container">
+                <div>
+                    <img src="imagem-ofertas/etiquetas_escolares.jpg" alt="oferta_etiquetas">
+                </div>
+
+                <div>
+                    <img src="imagem-ofertas/entrega.jpeg" alt="entrega">
+                </div>
+
+                <div>
+                    <img src="imagem-ofertas/pagamento.jpeg" alt="pagamento">
+                </div>
+            </div>
+
+            <h1 id="cont_titulo">Contatos</h1>
+            <div id= contato>
+                <div id="card_insta">
+                    <a href="https://www.instagram.com/josiandrade_personalizados?igshid=YTQwZjQ0NmI0OA%3D%3D" target="_blank"><img src="logos/logo_insta.png" alt="logo_isnta"></a>
+                </div>
+                <div id="card_whatsapp">
+
+                </div>
+                <div id="card_face">
+
+                </div>
+                <div id="card_tiktok">
+
+                </div>
             </div>
         </main>
     </div>
