--- a/index.html
+++ b/index.html
@@ -17,15 +17,12 @@
         </div>
         <nav>
             <a href="#">Início</a>
-            <a href="#">Nossos Produtos</a>
+            <a href="#">Meus Produtos</a>
+            <a href="#">Sobre mim</a>
         </nav>
     </header>
         <main>
             <div id="container">
-                <div>
-                    <img src="imagem-ofertas/etiquetas_escolares.jpg" alt="oferta_etiquetas">
-                </div>
-
                 <div>
                     <img src="imagem-ofertas/entrega.jpeg" alt="entrega">
                 </div>
@@ -38,7 +35,7 @@
             <h1 id="cont_titulo">Contatos</h1>
             <div id= contato>
                 <div id="card_insta">
-                    <a href="https://www.instagram.com/josiandrade_personalizados?igshid=YTQwZjQ0NmI0OA%3D%3D" target="_blank"><img src="logos/logo_insta.png" alt="logo_isnta"></a>
+                    <a href="https://www.instagram.com/josiandrade_personalizados?igshid=YTQwZjQ0NmI0OA%3D%3D" target="_blank"> <img src="logos/logo_insta.png" alt="logo_isnta"><h2>Instagram</h2></a>
                 </div>
                 <div id="card_whatsapp">
 
