--- a/index.html
+++ b/index.html
@@ -16,8 +16,7 @@
             <img src="logo_josi.jpg" alt="logomarca">
         </div>
         <nav>
-            <a href="#">Início</a>
-            <a href="#">Meus Produtos</a>
+            <a href="produtos.html">Produtos e Ofertas</a>
             <a href="#">Sobre mim</a>
         </nav>
     </header>
