--- a/produtos.html
+++ b/produtos.html
@@ -3,16 +3,44 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="CSS/reset.css" type="text/css">
+    <link rel="stylesheet" href="CSS/header.css" type="text/css">
+    <link rel="stylesheet" href="CSS/main.css" type="text/css">
+    <link rel="stylesheet" href="CSS/footer.css" type="text/css">
+    <link rel="stylesheet" href="CSS/mobile.css" type="text/css">
+    <link rel="stylesheet" href="CSS/ofertas.css">
     <title>Produtos</title>
 </head>
 <body>
-    <main>
+    <header>
+        <div id="logo">
+            <img src="logo_josi.jpg" alt="logomarca">
+        </div>
         <nav>
             <a href="index.html">Início</a>
             <a href="#">Sobre mim</a>
         </nav>
-        <div id="promocoes">
-
+    </header>
+    <main>
+        <div id="oferta">
+            <div id="oferta_bloco1">
+                <div>
+                    <img src="imagem-ofertas/etiqueta 1.jpg" alt="etiqueta 1">
+                </div>
+                    <div>
+                        <img src="imagem-ofertas/etiqueta 2.jpeg" alt="etiqueta 2">
+                    </div>
+                </div>
+            </div>
+            
+            <div id="oferta_bloco2">
+                <div>
+                    <img src="imagem-ofertas/etiqueta 3.jpeg" alt="etiqueta 3">
+                </div>
+                <div>
+                    <img src="imagem-ofertas/etiqueta 4.jpeg" alt="etiqueta 4">
+                </div>
+            </div>
         </div>
     </main>
     <footer>Site criado e desenvolvido por Diego Alvares de Macedo &copy;</footer>
