--- a/produtos.html
+++ b/produtos.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="pt-br">
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -27,10 +27,6 @@
                 <div>
                     <img src="imagem-ofertas/etiqueta 1.jpg" alt="etiqueta 1">
                 </div>
-                    <div>
-                        <img src="imagem-ofertas/etiqueta 2.jpeg" alt="etiqueta 2">
-                    </div>
-                </div>
             </div>
             
             <div id="oferta_bloco2">
@@ -39,6 +35,9 @@
                 </div>
                 <div>
                     <img src="imagem-ofertas/etiqueta 4.jpeg" alt="etiqueta 4">
+                </div>
+                <div>
+                    <img src="imagem-ofertas/etiqueta 2.jpeg" alt="etiqueta 2">
                 </div>
             </div>
         </div>
