--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
         </div>
         <nav>
             <a href="produtos.html">Produtos e Ofertas</a>
-            <a href="#">Sobre mim</a>
+            <a href="sobre.html">Sobre mim</a>
         </nav>
     </header>
         <main>
