--- a/produtos.html
+++ b/produtos.html
@@ -18,7 +18,7 @@
         </div>
         <nav>
             <a href="index.html">Início</a>
-            <a href="#">Sobre mim</a>
+            <a href="sobre.html">Sobre mim</a>
         </nav>
     </header>
     <main>
