--- a/sobre.html
+++ b/sobre.html
@@ -21,7 +21,21 @@
             <a href="produtos.html">Produtos e Ofertas</a>
         </nav>
     <main>
-        
+        <h1 id="cont_titulo">Contatos</h1>
+            <div id= contato>
+                <div id="card_insta">
+                    <a href="https://www.instagram.com/josiandrade_personalizados?igshid=YTQwZjQ0NmI0OA%3D%3D" target="_blank"> <img src="logos/logo_insta.png" alt="logo_isnta"><h2>Instagram</h2></a>
+                </div>
+                <div id="card_whatsapp">
+
+                </div>
+                <div id="card_face">
+
+                </div>
+                <div id="card_tiktok">
+
+                </div>
+            </div>
     </main>
 
 </body>
