--- a/produtos.html
+++ b/produtos.html
@@ -25,23 +25,16 @@
         <div id="oferta">
             <div id="oferta_bloco1">
                 <div>
-                    <img src="imagem-ofertas/etiqueta 1.jpg" alt="etiqueta 1">
-                </div>
-            </div>
-            
-            <div id="oferta_bloco2">
-                <div>
-                    <img src="imagem-ofertas/etiqueta 3.jpeg" alt="etiqueta 3">
+                    <img src="imagem-ofertas/kit 1.jpg" alt="kit 1">
                 </div>
                 <div>
-                    <img src="imagem-ofertas/etiqueta 4.jpeg" alt="etiqueta 4">
+                    <img src="imagem-ofertas/kit 2.jpeg" alt="kit 2">
                 </div>
                 <div>
-                    <img src="imagem-ofertas/etiqueta 2.jpeg" alt="etiqueta 2">
+                    <img src="imagem-ofertas/kit 3.jpeg" alt="kit 3">
                 </div>
             </div>
         </div>
-
         <h1 id="cont_titulo">Contatos</h1>
             <div id= contato>
                 <div id="card_insta">
