--- a/produtos.html
+++ b/produtos.html
@@ -8,7 +8,7 @@
     <link rel="stylesheet" href="CSS/main.css" type="text/css">
     <link rel="stylesheet" href="CSS/footer.css" type="text/css">
     <link rel="stylesheet" href="CSS/mobile.css" type="text/css">
-    <link rel="stylesheet" href="CSS/ofertas.css">
+    <link rel="stylesheet" href="CSS/ofertas.css" type="text/css">
     <title>Produtos</title>
 </head>
 <body>
