--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <link rel="stylesheet" href="CSS/header.css" type="text/css">
     <link rel="stylesheet" href="CSS/main.css" type="text/css">
     <link rel="stylesheet" href="CSS/footer.css" type="text/css">
-    <link rel="stylesheet" href="CSS/mobile.css" type="text/css">
+    <link rel="stylesheet" href="CSS/mobile_index.css" type="text/css">
     <title>Josi Andrade Personalizados</title>
 </head>
 <body>
