--- a/produtos.html
+++ b/produtos.html
@@ -7,7 +7,7 @@
     <link rel="stylesheet" href="CSS/header.css" type="text/css">
     <link rel="stylesheet" href="CSS/main.css" type="text/css">
     <link rel="stylesheet" href="CSS/footer.css" type="text/css">
-    <link rel="stylesheet" href="CSS/mobile.css" type="text/css">
+    <link rel="stylesheet" href="CSS/mobile_produtos.css" type="text/css">
     <link rel="stylesheet" href="CSS/ofertas.css" type="text/css">
     <title>Produtos</title>
 </head>
