atualização da parte mobile completa.

--- a/sobre.html
+++ b/sobre.html
@@ -9,6 +9,7 @@
     <link rel="stylesheet" href="CSS/footer.css" type="text/css">
     <link rel="stylesheet" href="CSS/ofertas.css" type="text/css">
     <link rel="stylesheet" href="CSS/sobre.css" type="text/css">
+    <link rel="stylesheet" href="CSS/mobile_sobre.css">
     <title>Document</title>
 </head>
 <body>
@@ -27,21 +28,7 @@
             </div>
             <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Consequuntur doloribus neque nihil animi tenetur sit! Praesentium quisquam atque facere nisi nesciunt, officiis voluptatem incidunt perferendis ab, aperiam eveniet accusamus ratione. Lorem ipsum dolor sit amet consectetur, adipisicing elit. Fuga officiis consequatur rerum magni tenetur unde doloremque debitis quis numquam doloribus. A est optio doloremque blanditiis inventore unde officiis sapiente nostrum! Lorem ipsum dolor sit amet consectetur adipisicing elit. Ipsa explicabo aliquid ducimus illum magni fuga fugit dolores vel ex voluptatem laudantium commodi, voluptates saepe soluta culpa, optio quasi labore sed!</p>
         </div>
-
-        <div id="sobre_mim2">
-            <div id="foto">
-                <img src="logo_josi.jpg" alt="">
-            </div>
-            <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Consequuntur doloribus neque nihil animi tenetur sit! Praesentium quisquam atque facere nisi nesciunt, officiis voluptatem incidunt perferendis ab, aperiam eveniet accusamus ratione. Lorem ipsum dolor sit amet consectetur, adipisicing elit. Fuga officiis consequatur rerum magni tenetur unde doloremque debitis quis numquam doloribus. A est optio doloremque blanditiis inventore unde officiis sapiente nostrum! Lorem ipsum dolor sit amet consectetur adipisicing elit. Ipsa explicabo aliquid ducimus illum magni fuga fugit dolores vel ex voluptatem laudantium commodi, voluptates saepe soluta culpa, optio quasi labore sed!</p>
-        </div>
-
-        <div id="sobre_mim3">
-            <div id="foto">
-                <img src="logo_josi.jpg" alt="">
-            </div>
-            <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Consequuntur doloribus neque nihil animi tenetur sit! Praesentium quisquam atque facere nisi nesciunt, officiis voluptatem incidunt perferendis ab, aperiam eveniet accusamus ratione. Lorem ipsum dolor sit amet consectetur, adipisicing elit. Fuga officiis consequatur rerum magni tenetur unde doloremque debitis quis numquam doloribus. A est optio doloremque blanditiis inventore unde officiis sapiente nostrum! Lorem ipsum dolor sit amet consectetur adipisicing elit. Ipsa explicabo aliquid ducimus illum magni fuga fugit dolores vel ex voluptatem laudantium commodi, voluptates saepe soluta culpa, optio quasi labore sed!</p>
-        </div>
-
+        
         <h1 id="cont_titulo">Contatos</h1>
             <div id= contato>
                 <div id="card_insta">
