--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
 <body>
     <header>
         <div id="logo">
-            <img src="logo_josi.jpg" alt="logomarca">
+            <img src="logo_josi2.JPG" alt="logomarca">
         </div>
         <nav>
             <a href="produtos.html">Produtos e Ofertas</a>
