--- a/sobre.html
+++ b/sobre.html
@@ -15,7 +15,7 @@
 <body>
     <header>
         <div id="logo">
-            <img src="logo_josi.jpg" alt="logomarca">
+            <img src="logo_josi2.JPG" alt="logomarca">
         </div>
         <nav>
             <a href="index.html">Início</a>
