--- a/index.html
+++ b/index.html
@@ -13,9 +13,9 @@
 <body>
     <header>
         <div id="logo">
-            <img src="logo_josi2.JPG" alt="logomarca">
+            <img src="logo_josi.jpg" alt="logomarca">
         </div>
-        <nav>
+        <nav>   
             <a href="produtos.html">Produtos e Ofertas</a>
             <a href="sobre.html">Sobre mim</a>
         </nav>
